Added functionality to view a report using /view/<id>

--- a/webui/webapp/templates/base.html
+++ b/webui/webapp/templates/base.html
@@ -6,6 +6,7 @@
         <div>
             Police Reports Berlin:
             <a href="{{ url_for('searchPage') }}">Search</a>
+            <a href="{{ url_for('browsePage') }}">Browse</a>
             <a href="{{ url_for('classes') }}">Classes</a>
         </div>
         <hr>
