--- a/webui/webapp/templates/BrowsePage.html
+++ b/webui/webapp/templates/BrowsePage.html
@@ -1,5 +1,17 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Browse</h1>
+    <h1>Browse All Reports</h1>
+    {% if reports %}
+        {% for report in reports %}
+            <div class="report">
+                <div class="reportTitle">
+                <a href="/view/{{ report.id }}">{{ report.title.decode("utf-8") }}</a>
+                </div>
+            <div class="reportLocDate">{{ report.location.decode("utf-8") }} | {{ report.date.decode("utf-8") }}</div>
+            <div class="reportLink">{{ " ".join(report.event.decode("utf-8").split()[0:30]) + " [...]" }}</div>
+            </div>
+        {% endfor %}
+        <div class="nav"><a href="javascript:history.back()">Last</a> <a href="/browse/{{ toID + 2 }}/{{ toID + 1 + displayedPages }}">Next</a></div>
+    {% endif %}
 {% endblock %}
