--- a/webui/webapp/templates/ViewPage.html
+++ b/webui/webapp/templates/ViewPage.html
@@ -8,5 +8,5 @@
         {% if date %}<b>{{ date }}</b></br>{% endif %}
         {% if event %}{{ event }}</br>{% endif %}
         </br>
-        {% if link %}{{ link }}</br>{% endif %}
+        {% if link %}<a href="{{ link }}">{{ link }}</a></br>{% endif %}
 {% endblock %}
