Added css for browse page

--- a/webui/webapp/templates/base.html
+++ b/webui/webapp/templates/base.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Police Reports Berlin</title>
+        <link rel="stylesheet" type="text/css" href="/static/stylesheet.css">
     </head>
     <body>
         <div>
