--- a/webui/webapp/templates/SearchPage.html
+++ b/webui/webapp/templates/SearchPage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Searchpage</h1>
-    <form action="" method="post" novalidate>
+    <form action="search" method="post" novalidate>
         {{ form.hidden_tag() }}
         <p>
             {{ form.query.label }}<br>
