--- a/webui/webapp/static/stylesheet.css
+++ b/webui/webapp/static/stylesheet.css
@@ -2,6 +2,15 @@
     padding-bottom: 15;
 }
 
+a {
+    text-decoration: none;
+    color: blue;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .reportTitle {
     font-size: larger;
 }
