Implemented a working version of report filtering

--- a/webui/webapp/static/stylesheet.css
+++ b/webui/webapp/static/stylesheet.css
@@ -24,3 +24,14 @@ a:hover {
     font-size: small;
     font-weight: bold;
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+li {
+    float: left;
+}
